feat: Record DTO 적용으로 주문 서비스 코드 품질 개선